--- a/tekunice-backend/tekunice-backend/src/main/resources/application.properties
+++ b/tekunice-backend/tekunice-backend/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
+
+spring.datasource.initialization-mode=always
+spring.sql.init.mode=always
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+
+spring.main.allow-circular-references = true
+
