--- a/tekunice-backend/tekunice-backend/src/main/resources/application.properties
+++ b/tekunice-backend/tekunice-backend/src/main/resources/application.properties
@@ -2,17 +2,23 @@ server.port=8080
 
 server.error.include-message=ALWAYS
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
-
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.initialization-mode=always
+spring.datasource.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/tekuniceDB
+spring.datasource.username=postgres
+spring.datasource.password=root
+#JPA-Hibernate
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.show-sql = true
+spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
+
+
 
 spring.main.allow-circular-references = true
 
