--- a/tekunice-backend/tekunice-backend/pom.xml
+++ b/tekunice-backend/tekunice-backend/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.kie</groupId>
+			<artifactId>kie-ci</artifactId>
+			<version>8.22.0.Beta</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.h2database</groupId>
