--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,8 @@ tekunice-backend/.idea/libraries/Maven__com_fasterxml_jackson_core_jackson_datab
 tekunice-backend/.idea/libraries/Maven__com_fasterxml_classmate_1_5_1.xml
 tekunice-backend/.idea/libraries/Maven__com_fasterxml_jackson_datatype_jackson_datatype_jsr310_2_13_2.xml
 tekunice-backend/.idea/libraries/Maven__com_google_guava_guava_16_0_1.xml
+*.xml
+drools-spring/drools-spring-app/.classpath
+*.MF
+*.MF
+*.xml
