--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ tekunice-backend/.idea/libraries/Maven__com_fasterxml_jackson_datatype_jackson_d
 tekunice-backend/.idea/libraries/Maven__com_google_guava_guava_16_0_1.xml
 *.xml
 *.class
+*.class
