--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ tekunice-backend/.idea/libraries/Maven__com_google_guava_guava_16_0_1.xml
 *.xml
 *.class
 *.class
+*.class
+drools-spring/drools.spring/.idea/workspace.xml
