--- a/drools-spring/drools.spring/pom.xml
+++ b/drools-spring/drools.spring/pom.xml
@@ -46,7 +46,12 @@
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>2.2.3</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.5.6</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
