--- a/drools-spring/drools.spring/pom.xml
+++ b/drools-spring/drools.spring/pom.xml
@@ -36,6 +36,7 @@
 			<artifactId>kie-ci</artifactId>
 			<version>${kie.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -50,6 +51,11 @@
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-jpa</artifactId>
             <version>2.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>drools-spring-primer</groupId>
+            <artifactId>drools.spring</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 	<build>
