--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ drools-spring/drools.spring/.idea/workspace.xml
 *.class
 drools-spring/drools.spring/.idea/runConfigurations.xml
 *.class
+*.class
