--- a/drools-spring/drools-spring-app/pom.xml
+++ b/drools-spring/drools-spring-app/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>spring-beans</artifactId>
             <version>5.3.20</version>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.22.0-GA</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
