--- a/drools-spring/drools-spring-app/src/main/resources/application.properties
+++ b/drools-spring/drools-spring-app/src/main/resources/application.properties
@@ -15,3 +15,4 @@ spring.jpa.show-sql = false
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
