--- a/drools-spring/drools-spring-app/pom.xml
+++ b/drools-spring/drools-spring-app/pom.xml
@@ -116,6 +116,11 @@
             <artifactId>jjwt</artifactId>
             <version>0.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.3.20</version>
+        </dependency>
     </dependencies>
 
     <properties>
